--- a/src/Styles/Product.css
+++ b/src/Styles/Product.css
@@ -1,5 +1,6 @@
 .productCard {
-    width: 14vmax;
+    width: 90%;
+    height: 90%;
     display: flex;
     flex-direction: column;
     text-decoration: none;
@@ -64,4 +65,3 @@
         font: 300 0.7vmax "Roboto";
     }
 }
-
