--- a/src/Styles/Product.css
+++ b/src/Styles/Product.css
@@ -1,6 +1,6 @@
 .productCard {
-    width: 90%;
-    height: 90%;
+    width: 20vmax;
+    height: 28vmax;
     display: flex;
     flex-direction: column;
     text-decoration: none;
@@ -11,7 +11,8 @@
 }
 
 .productCard > img {
-    width: 14vmax;
+    width: 20vmax;
+    height: 16vmax;
 }
 
 .productCard > div {
@@ -45,6 +46,16 @@
 
     transform: translateY(-1vmax);
 }
+
+.AddBtn {
+    border-radius: 50px;
+    width: 120px;
+}
+
+.AddBtn:hover {
+    background-color: #198754;
+}
+
 
 @media screen and (max-width: 600px){
     .productCard > p {
