--- a/src/Styles/Product.css
+++ b/src/Styles/Product.css
@@ -1,6 +1,6 @@
 .productCard {
-    width: 20vmax;
-    height: 28vmax;
+    width: 90%;
+    height: 90%;
     display: flex;
     flex-direction: column;
     text-decoration: none;
@@ -11,7 +11,7 @@
 }
 
 .productCard > img {
-    width: 20vmax;
+    width: 100%;
     height: 16vmax;
 }
 
